smol refactor